# Blasteroids

./: .gitignore  CMakeLists.txt  README.md
assets/: source.txt
src/: CMakeLists.txt  asteroid.c  asteroid.h  blast.c  blast.h  blasteroids.c  boundingbox.c  boundingbox.h  calc.c  calc.h  spaceship.c  spaceship.h
